Fix datasets versions

--- a/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_generative_eval.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install transformers==4.56.1 evaluate==0.4.5 torch==2.7.0 unsloth==2025.9.1 ipywidgets==8.1.7 numpy==2.3.2 pandas==2.3.2 datasets==3.6.0 jupyter==1.1.1"
+    "!pip install transformers==4.56.1 evaluate==0.4.5 torch==2.7.0 unsloth==2025.9.1 ipywidgets==8.1.7"
    ]
   },
   {
@@ -38,8 +38,7 @@
     "import numpy as np\n",
     "import torch\n",
     "from unsloth import FastLanguageModel\n",
-    "from transformers import TextStreamer\n",
-    "from datasets import load_dataset"
+    "from transformers import TextStreamer"
    ]
   },
   {
@@ -115,23 +114,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd5c468e",
+   "metadata": {},
+   "source": [
+    "Let's test (this time manually) how the trained LLM-based models perform on a given text\n",
+    "using an out of domain novel (Cuore)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c920f111",
+   "id": "72ce7b9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_model(model_name):\n",
+    "input_text = \"\"\"Non era un legno di lusso, ma un semplice pezzo\n",
+    "da catasta, di quelli che d’inverno si mettono nelle\n",
+    "stufe e nei caminetti per accendere il fuoco e per riscaldare le stanze.\n",
+    "Non so come andasse, ma il fatto gli è che un bel\n",
+    "giorno questo pezzo di legno capitò nella bottega\n",
+    "di un vecchio falegname, il quale aveva nome mastr’Antonio, se non che tutti lo chiamavano maestro\n",
+    "Ciliegia, per via della punta del suo naso, che era\n",
+    "sempre lustra e paonazza, come una ciliegia matura.\n",
+    "Appena maestro Ciliegia ebbe visto quel pezzo di\n",
+    "legno, si rallegrò tutto; e dandosi una fregatina di\n",
+    "mani per la contentezza, borbottò a mezza voce:\n",
+    "\"Questo legno è capitato a tempo; voglio servirmene per fare una gamba di tavolino.\" \n",
+    "\"\"\"\n",
+    "input_text = input_text.splitlines()\n",
+    "input_text = \" \".join(input_text)\n",
+    "input_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e84ec7d",
+   "metadata": {},
+   "source": [
+    "Each model is loaded from Hugging Face and used to generate the answer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e1cbfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_model(name):\n",
     "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
-    "        'fax4ever/' + model_name, \n",
+    "        'fax4ever/' + name, \n",
     "        load_in_4bit=True, \n",
     "        dtype=None, \n",
     "        max_seq_length=512\n",
     "    )\n",
     "    model = FastLanguageModel.for_inference(model)\n",
-    "    return model, tokenizer    \n",
-    "\n",
-    "def use_model(model, tokenizer, input_text):\n",
     "    question = tokenizer.apply_chat_template(\n",
     "        [Prompt(input_text).question()], \n",
     "        tokenize = False,\n",
@@ -149,62 +187,51 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb7eb3e",
+   "id": "3b66fd04",
    "metadata": {},
    "source": [
-    "The LLM-based models we fine tuned are:\n",
-    "\n",
-    "1. Minerva-7B-instruct-v1.0-sentence-splitter\n",
-    "2. qwen3-4b-unsloth-bnb-4bit-sentence-splitter\n",
-    "3. mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\n",
-    "4. meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter"
+    "Testing one model at a time (commenting the others) to avoid memory issues,\n",
+    "restarting the Kernel to free the GPU memory!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4b598b5",
+   "id": "82e1e047",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, tokenizer = load_model(\"Minerva-7B-instruct-v1.0-sentence-splitter\")"
+    "# test_model(\"qwen3-4b-unsloth-bnb-4bit-sentence-splitter\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3e26b3",
+   "id": "17bc3184",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with fax4ever/sentence-splitter-ood-192 we produce more than 512 tokens!\n",
-    "dataset_dict = load_dataset(\"fax4ever/sentence-splitter-ood-128\")"
+    "# test_model(\"meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8737ad29",
+   "id": "74a1f19e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def words_to_sequence(words):\n",
-    "    return \" \".join(words)"
+    "# test_model(\"mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a2231e",
+   "id": "a90024bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch in dataset_dict[\"test\"].iter(batch_size=1):\n",
-    "    words = batch[\"tokens\"][0]\n",
-    "    golden_labels = batch[\"labels\"][0]\n",
-    "\n",
-    "    use_model(model, tokenizer, words_to_sequence(words))\n",
-    "    break"
+    "test_model(\"Minerva-7B-instruct-v1.0-sentence-splitter\")"
    ]
   }
  ],
