--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test.ipynb
@@ -110,7 +110,7 @@
    ],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install transformers evaluate torch ipywidgets scikit-learn"
+    "!pip install transformers==4.56.1 evaluate==0.4.5 torch==2.7.0 ipywidgets==8.1.7 scikit-learn==1.7.1"
    ]
   },
   {
