--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_generative.ipynb
@@ -139,7 +139,7 @@
     "        enable_thinking = False, # Disable thinking\n",
     "    )\n",
     "\n",
-    "    model.generate(\n",
+    "    return model.generate(\n",
     "        **tokenizer(question, return_tensors = \"pt\").to(\"cuda\"),\n",
     "        max_new_tokens = 512,\n",
     "        temperature = 0.7, top_p = 0.8, top_k = 20, # For non thinking\n",
@@ -189,7 +189,15 @@
    "outputs": [],
    "source": [
     "def words_to_sequence(words):\n",
-    "    return \" \".join(words)"
+    "    input_text = \" \".join(words)\n",
+    "    input_text = input_text.replace(\" ,\", \",\")\n",
+    "    input_text = input_text.replace(\" .\", \".\")\n",
+    "    input_text = input_text.replace(\" ?\", \"?\")\n",
+    "    input_text = input_text.replace(\" !\", \"!\")\n",
+    "    input_text = input_text.replace(\" :\", \":\")\n",
+    "    input_text = input_text.replace(\" ;\", \";\")\n",
+    "    input_text = input_text.replace(\"' \", \"'\")\n",
+    "    return input_text"
    ]
   },
   {
@@ -203,7 +211,8 @@
     "    words = batch[\"tokens\"][0]\n",
     "    golden_labels = batch[\"labels\"][0]\n",
     "\n",
-    "    use_model(model, tokenizer, words_to_sequence(words))\n",
+    "    output = use_model(model, tokenizer, words_to_sequence(words)).cpu()\n",
+    "    text = tokenizer.decode(output[0])\n",
     "    break"
    ]
   }
