Apply label generations to generative notebook

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
@@ -36,10 +36,12 @@
    "source": [
     "import random\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import torch\n",
     "from unsloth import FastLanguageModel\n",
     "from transformers import TextStreamer\n",
-    "from datasets import load_dataset"
+    "from datasets import load_dataset\n",
+    "import evaluate"
    ]
   },
   {
@@ -157,7 +159,9 @@
     "1. Minerva-7B-instruct-v1.0-sentence-splitter\n",
     "2. qwen3-4b-unsloth-bnb-4bit-sentence-splitter\n",
     "3. mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\n",
-    "4. meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter"
+    "4. meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter\n",
+    "\n",
+    "We choose to produce label for the (1)"
    ]
   },
   {
@@ -201,6 +205,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23635c80",
+   "metadata": {},
+   "source": [
+    "Produce sentence splitting labels from a LLM is not a super easy task according to our analysis.\n",
+    "So we created an utility class to produce labels for the test set words using the LLM output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24ae1a6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MinervaLabels:\n",
+    "  def __init__(self, minerva_output:str, words:list):\n",
+    "    self.words = words\n",
+    "    self.words_joined = \"\".join(words)\n",
+    "    self.minerva_output = minerva_output\n",
+    "    self.sentences = self._create_sentences()\n",
+    "    self.aligned_sentences = self._aligned_sentences()\n",
+    "    self._check_alinged_sentences() # Sanity check\n",
+    "\n",
+    "  def _create_sentences(self):\n",
+    "    import re\n",
+    "    sentences = []\n",
+    "    for line in self.minerva_output.split(\"\\n\"):\n",
+    "      # Look for lines that start with number followed by dot and space\n",
+    "      match = re.match(r'^(\\d+)\\.\\s+(.*)', line)\n",
+    "      if match:\n",
+    "        sentence = match.group(2)  # Extract the sentence part after \"NUMBER. \"\n",
+    "        # Clean up Minerva control tokens like <|eot_id|>\n",
+    "        sentence = re.sub(r'<\\|[^|]+\\|>', '', sentence)\n",
+    "        sentences.append(sentence)\n",
+    "    return sentences\n",
+    "\n",
+    "  def _aligned_sentences(self):\n",
+    "    return [self._align_sentence(sentence) for sentence in self.sentences]\n",
+    "\n",
+    "  def _align_sentence(self, sentence):\n",
+    "    sentence = sentence.replace(\" \", \"\")\n",
+    "    sentence = sentence.replace(\"...\", \"…\")\n",
+    "    if sentence in self.words_joined:\n",
+    "      return sentence\n",
+    "    else:\n",
+    "      raise ValueError(f\"Sentence {sentence} not found in {self.words_joined}\")\n",
+    "\n",
+    "  def _check_alinged_sentences(self):\n",
+    "    aligned_join = \"\".join(self.aligned_sentences)\n",
+    "    if not aligned_join == self.words_joined:\n",
+    "      raise ValueError(f\"Aligned sentences {self.aligned_sentences} do not match words {self.words_joined}\")\n",
+    "\n",
+    "  def aligned_labels(self, golden_labels):\n",
+    "    labels = [0] * len(self.words)\n",
+    "\n",
+    "    index = 0\n",
+    "    split_indexes = set()\n",
+    "    for sentence in self.aligned_sentences:\n",
+    "      length = len(sentence)\n",
+    "      index += length\n",
+    "      split_indexes.add(index)\n",
+    "    \n",
+    "    index = 0\n",
+    "    for i, word in enumerate(self.words):\n",
+    "      length = len(word)\n",
+    "      index += length\n",
+    "      if index in split_indexes:\n",
+    "        labels[i] = 1\n",
+    "\n",
+    "    # The last word can be a 1 or a 0,\n",
+    "    # the model is not asked to predict the last word, so we use the golden labels\n",
+    "    labels[-1] = golden_labels[-1]\n",
+    "    \n",
+    "    return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "502c4cef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_words = []\n",
+    "all_golden_labels = []\n",
+    "all_minerva_labels = []\n",
+    "minerva_f1 = evaluate.load(\"f1\", average=\"binary\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "29a2231e",
@@ -212,8 +307,33 @@
     "    golden_labels = batch[\"labels\"][0]\n",
     "\n",
     "    output = use_model(model, tokenizer, words_to_sequence(words)).cpu()\n",
-    "    text = tokenizer.decode(output[0])\n",
-    "    break"
+    "    minerva_output = tokenizer.decode(output[0])\n",
+    "    minerva_labels = MinervaLabels(minerva_output, words).aligned_labels(golden_labels)\n",
+    "\n",
+    "    print(words)\n",
+    "    all_words.extend(words)\n",
+    "    all_golden_labels.extend(golden_labels)\n",
+    "    all_minerva_labels.extend(minerva_labels)\n",
+    "    minerva_f1.add_batch(predictions=minerva_labels, references=golden_labels)\n",
+    "\n",
+    "print(\"Minerva-7B-instruct-v1.0-sentence-splitter F1: \", minerva_f1.compute())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b4ef4ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# produce a pandas dataframe with the results\n",
+    "mb_results = pd.DataFrame({\n",
+    "    \"token\": all_words,\n",
+    "    \"label\": all_minerva_labels,\n",
+    "})\n",
+    "\n",
+    "# save the results\n",
+    "mb_results.to_csv(\"Lost_in_language_recognition-hw2_split-Minerva-7B-based.csv\", index=False)"
    ]
   }
  ],
