--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
@@ -5,7 +5,20 @@
    "id": "803724cc",
    "metadata": {},
    "source": [
-    "# Sentence Splitter: Out of Domain Evaluation (Generative models)"
+    "# Sentence Splitter: Out of Domain Evaluation\n",
+    "\n",
+    "## Test set / Generative models Notebook\n",
+    "\n",
+    "In this notebook we're going to use a fine tuned sentence splitting LLM model (based Minerva 7B instruct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "310e3a31",
+   "metadata": {},
+   "source": [
+    "Install the liberaries on the local virtual environment.\n",
+    "We asked for specific versions to enforce maximum reproducibiliy for this notebook."
    ]
   },
   {
@@ -16,7 +29,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install transformers==4.56.1 evaluate==0.4.5 torch==2.7.0 unsloth==2025.9.1 ipywidgets==8.1.7 numpy==2.3.2 pandas==2.3.2 datasets==3.6.0 jupyter==1.1.1"
+    "!pip install transformers==4.56.1 evaluate==0.4.5 torch==2.7.0 unsloth==2025.9.1 ipywidgets==8.1.7 numpy==2.3.2 pandas==2.3.2 datasets==3.6.0 jupyter==1.1.1 scikit-learn==1.7.1"
    ]
   },
   {
@@ -210,7 +223,36 @@
    "metadata": {},
    "source": [
     "Produce sentence splitting labels from a LLM is not a super easy task according to our analysis.\n",
-    "So we created an utility class to produce labels for the test set words using the LLM output."
+    "So we created an utility class to produce labels for the test set words using the LLM output.\n",
+    "\n",
+    "To have a perfect align we need to manually change the output of the LLM with very few replacements:\n",
+    "\n",
+    "1. ... => …\n",
+    "2. mise => messe\n",
+    "3. trasfigurato => trasfigurito\n",
+    "\n",
+    "The tre dots can be writen as a `…` single caracter in place of the three dots caracters `...`.\n",
+    "\n",
+    "Messe can be used in placed of mise, see https://www.scholingua.com/it/it/coniugazione/mettersi.\n",
+    "Probabily the former is an older form.\n",
+    "\n",
+    "Transfigurito looks an alternative way of saying transfigurato, see https://www.treccani.it/vocabolario/ricerca/trasfigurito/.\n",
+    "\n",
+    "We can see those as small allucinations and we want to tollerate.\n",
+    "Other allucincations will produce an `AllucinationException` that will be logged to the system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77ec021b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AllucinationException(Exception):\n",
+    "    def __init__(self, message):\n",
+    "        self.message = message\n",
+    "        super().__init__(self.message)"
    ]
   },
   {
@@ -248,15 +290,19 @@
     "  def _align_sentence(self, sentence):\n",
     "    sentence = sentence.replace(\" \", \"\")\n",
     "    sentence = sentence.replace(\"...\", \"…\")\n",
+    "    sentence = sentence.replace(\"mise\", \"messe\")\n",
+    "    sentence = sentence.replace(\"trasfigurato\", \"trasfigurito\")\n",
     "    if sentence in self.words_joined:\n",
     "      return sentence\n",
     "    else:\n",
-    "      raise ValueError(f\"Sentence {sentence} not found in {self.words_joined}\")\n",
+    "      # in this case the model is hallucinating altering a sentence or producing a sentence that does not exist\n",
+    "      raise AllucinationException(f\"Sentence {sentence} not found in {self.words_joined}\")\n",
     "\n",
     "  def _check_alinged_sentences(self):\n",
     "    aligned_join = \"\".join(self.aligned_sentences)\n",
     "    if not aligned_join == self.words_joined:\n",
-    "      raise ValueError(f\"Aligned sentences {self.aligned_sentences} do not match words {self.words_joined}\")\n",
+    "      # in this case the model is hallucinating not producing a sentence passed in input\n",
+    "      raise AllucinationException(f\"Aligned sentences {self.aligned_sentences} do not match words {self.words_joined}\")\n",
     "\n",
     "  def aligned_labels(self, golden_labels):\n",
     "    labels = [0] * len(self.words)\n",
@@ -302,15 +348,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch in dataset_dict[\"test\"].iter(batch_size=1):\n",
+    "for i, batch in enumerate(dataset_dict[\"test\"].iter(batch_size=1)):\n",
     "    words = batch[\"tokens\"][0]\n",
     "    golden_labels = batch[\"labels\"][0]\n",
     "\n",
     "    output = use_model(model, tokenizer, words_to_sequence(words)).cpu()\n",
     "    minerva_output = tokenizer.decode(output[0])\n",
-    "    minerva_labels = MinervaLabels(minerva_output, words).aligned_labels(golden_labels)\n",
     "\n",
+    "    try:\n",
+    "        minerva_labels_helper = MinervaLabels(minerva_output, words)\n",
+    "    except AllucinationException as e:\n",
+    "        print(e)\n",
+    "        continue\n",
+    "    \n",
+    "    minerva_labels = minerva_labels_helper.aligned_labels(golden_labels)\n",
+    "\n",
+    "    print(f\"Batch {i}\")\n",
     "    print(words)\n",
+    "    print(golden_labels)\n",
+    "    print(minerva_labels)\n",
+    "\n",
     "    all_words.extend(words)\n",
     "    all_golden_labels.extend(golden_labels)\n",
     "    all_minerva_labels.extend(minerva_labels)\n",
