Generate fixed Minerva output

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb
@@ -5,7 +5,9 @@
    "id": "85bddf41",
    "metadata": {},
    "source": [
-    "# Sentence Splitter: Out-of-Domain Test Set\n",
+    "# Sentence Splitter: Out of Domain Evaluation\n",
+    "\n",
+    "## Test set Inference using Generative models\n",
     "\n",
     "In this notebook we will produce labels for the out-of-domain test set.\n",
     "We also compute the F1 score using the computed labels and the gold labels provided by the test set.\n",
@@ -3423,7 +3425,7 @@
     "})\n",
     "\n",
     "# Optionally push the dataset to the hub.\n",
-    "dataset_dict.push_to_hub(f\"fax4ever/sentence-splitter-ood-{SIZE}\", token=os.getenv(\"HF_TOKEN\"))\n",
+    "# dataset_dict.push_to_hub(f\"fax4ever/sentence-splitter-ood-{SIZE}\", token=os.getenv(\"HF_TOKEN\"))\n",
     "\n",
     "# Alternatively, load the dataset from the hub.\n",
     "dataset_dict = load_dataset(f\"fax4ever/sentence-splitter-ood-{SIZE}\")"
