Notebooks final review

--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_discriminative.ipynb
@@ -7,12 +7,21 @@
    "source": [
     "# Sentence Splitter: Out of Domain Evaluation\n",
     "\n",
-    "## Test set Inference using Generative models\n",
+    "## Test Set Inference Using Discriminative Models\n",
     "\n",
-    "In this notebook we will produce labels for the out-of-domain test set.\n",
-    "We also compute the F1 score using the computed labels and the gold labels provided by the test set.\n",
+    "In this notebook, we're going to use fine-tuned sentence splitting embedding models to evaluate performance on out-of-domain data. Based on BERT base italian XXL-cased and Electra ITA XXL.\n",
     "\n",
     "> **Note**: The F1 from the test set is not used to tune models or select checkpoints."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75b39ce6",
+   "metadata": {},
+   "source": [
+    "## Setup and Installation\n",
+    "\n",
+    "Install the libraries in the local virtual environment. We use specific versions to enforce maximum reproducibility for this notebook."
    ]
   },
   {
@@ -121,7 +130,9 @@
    "id": "a18d51c1",
    "metadata": {},
    "source": [
-    "Import all required libraries:"
+    "## Import Libraries\n",
+    "\n",
+    "Import the necessary libraries for model inference, data processing, and evaluation."
    ]
   },
   {
@@ -155,7 +166,9 @@
    "id": "f11277ae",
    "metadata": {},
    "source": [
-    "Before proceeding, make the run as deterministic as possible:"
+    "## Reproducibility Setup\n",
+    "\n",
+    "Set up deterministic behavior for reproducible results by configuring random seeds for all relevant libraries:"
    ]
   },
   {
@@ -181,6 +194,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "816fbf6f",
+   "metadata": {},
+   "source": [
+    "## Data Preparation\n",
+    "\n",
+    "Load the test set and group words into sequences.\n",
+    "\n",
+    "**Important**: Sequences (inputs to the encoder) are not sentences (the outputs we want)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "58225dfc",
@@ -198,15 +223,6 @@
     "    label_seqs = [labels[i:i+seq_len] for i in range(0, len(labels), seq_len)]\n",
     "    \n",
     "    return {'tokens': token_seqs, 'labels': label_seqs}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1790f237",
-   "metadata": {},
-   "source": [
-    "Load the test set and group words into sequences.\n",
-    "Remember: sequences (inputs to the encoder) are not sentences (the outputs we want)."
    ]
   },
   {
@@ -3398,6 +3414,8 @@
    "id": "2a6d0242",
    "metadata": {},
    "source": [
+    "## Dataset Creation\n",
+    "\n",
     "Create a dataset from the grouped sequences so it can be reused."
    ]
   },
@@ -3436,9 +3454,9 @@
    "id": "0dabe7c4",
    "metadata": {},
    "source": [
-    "Create two inference pipelines for the models that performed best in our out-of-domain evaluations: Modern BERT ITA XXL and Electra ITA XXL.\n",
+    "## Model Loading\n",
     "\n",
-    "Model selection was done before evaluating on this test set, based on performance on other datasets. No test labels were used in this choice."
+    "Create two inference pipelines for the models that performed best in another notebook (`colabs/sentence_splitter_out_of_domain_eval_discriminative.ipynb`) in which we used a dataset found on the web (and not the test dataset) to choose Modern BERT ITA XXL and Electra ITA XXL as best base models."
    ]
   },
   {
@@ -3471,6 +3489,8 @@
    "id": "6df26c8d",
    "metadata": {},
    "source": [
+    "## Model Inference and Evaluation\n",
+    "\n",
     "Compute the predicted labels.\n",
     "\n",
     "The model produces a label for each token. Using the \"simple\" aggregation strategy, contiguous tokens with the same label are grouped into a single entity. We then split those strings into words (by removing whitespace). Finally, we align those words (and their labels) with the words provided by the gold dataset.\n",
@@ -3615,6 +3635,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a89125bf",
+   "metadata": {},
+   "source": [
+    "## Results Export\n",
+    "\n",
+    "Finally, export the inference results to CSV files for further analysis and comparison with other models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "66c5c983",
@@ -3637,6 +3667,16 @@
     "\n",
     "# save the results\n",
     "el_results.to_csv(\"Lost_in_language_recognition-hw2_split-electra-base-italian-xxl-cased.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de9caf22",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "The results from this notebook will be used to analyze common prediction errors and model performance patterns. Detailed analysis and insights can be found in the accompanying research report."
    ]
   }
  ],
