--- a/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
+++ b/sentence_splitter/colabs/sentence_splitter_out_of_domain_test_generative.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "# Sentence Splitter: Out of Domain Evaluation\n",
     "\n",
-    "## Test set Inference using Generative models\n",
+    "## Test Set Inference Using Generative Models\n",
     "\n",
-    "In this notebook we're going to use a fine tuned sentence splitting LLM model (based Minerva 7B instruct)"
+    "In this notebook, we're going to use a fine-tuned sentence splitting LLM model based on Minerva 7B Instruct to evaluate performance on out-of-domain data.\n",
+    "\n",
+    "> **Note**: The F1 from the test set is not used to tune models or select checkpoints."
    ]
   },
   {
@@ -17,8 +19,8 @@
    "id": "310e3a31",
    "metadata": {},
    "source": [
-    "Install the liberaries on the local virtual environment.\n",
-    "We asked for specific versions to enforce maximum reproducibiliy for this notebook."
+    "Install the libraries in the local virtual environment.\n",
+    "We use specific versions to enforce maximum reproducibility for this notebook."
    ]
   },
   {
@@ -439,7 +441,7 @@
    "id": "cda69806",
    "metadata": {},
    "source": [
-    "Import the libraries"
+    "Import the necessary libraries for model inference, data processing, and evaluation."
    ]
   },
   {
@@ -473,7 +475,7 @@
    "id": "eeb35c8e",
    "metadata": {},
    "source": [
-    "Before proceeding, make the run as deterministic as possible:"
+    "Set up deterministic behavior for reproducible results by configuring random seeds for all relevant libraries:"
    ]
   },
   {
@@ -505,8 +507,8 @@
    "id": "0da81171",
    "metadata": {},
    "source": [
-    "Reuse the `Prompt` class from the training notebook.\n",
-    "Here only the `question` method will be invoked."
+    "Define the `Prompt` class (reused from the training notebook) to format input text for the LLM.\n",
+    "For inference, we only use the `question` method to generate prompts without expected outputs."
    ]
   },
   {
@@ -538,6 +540,16 @@
     "            {\"role\" : \"system\",    \"content\" : \"Sei un esperto di linguistica italiana specializzato nella segmentazione delle frasi.\"},\n",
     "            {\"role\" : \"user\",      \"content\" : self.instruction()},\n",
     "        ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4289e40",
+   "metadata": {},
+   "source": [
+    "Load the model and tokenizer from the Hugging Face Hub. \n",
+    "We apply model-specific chat templates to format questions into proper prompts for the LLM.\n",
+    "The output is streamed and logged during generation for real-time monitoring."
    ]
   },
   {
@@ -578,14 +590,14 @@
    "id": "4eb7eb3e",
    "metadata": {},
    "source": [
-    "The LLM-based models we fine tuned are:\n",
+    "The LLM-based models we fine-tuned are:\n",
     "\n",
     "1. Minerva-7B-instruct-v1.0-sentence-splitter\n",
     "2. qwen3-4b-unsloth-bnb-4bit-sentence-splitter\n",
     "3. mistral-7b-instruct-v0.3-bnb-4bit-sentence-splitter\n",
     "4. meta-llama-3.1-8b-instruct-unsloth-bnb-4bit-sentence-splitter\n",
     "\n",
-    "We choose to produce label for the (1)"
+    "We choose to produce labels using model (1), the Minerva-7B-instruct-v1.0-sentence-splitter."
    ]
   },
   {
@@ -780,6 +792,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dce8379d",
+   "metadata": {},
+   "source": [
+    "Load the pre-processed dataset that was generated in the `sentence_splitter_out_of_domain_test_discriminative.ipynb` notebook. This dataset is essentially a grouped version of the `data/OOD_test.csv` file, where words are organized into sequences.\n",
+    "\n",
+    "**Note:** These sequences are not actual sentences—they are artificial groupings for processing purposes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "5f3e26b3",
@@ -857,24 +879,24 @@
    "id": "23635c80",
    "metadata": {},
    "source": [
-    "Produce sentence splitting labels from a LLM is not a super easy task according to our analysis.\n",
-    "So we created an utility class to produce labels for the test set words using the LLM output.\n",
+    "Producing sentence splitting labels from an LLM is not a trivial task according to our analysis.\n",
+    "We created a utility class to produce labels for the test set words using the LLM output.\n",
     "\n",
-    "To have a perfect align we need to manually change the output of the LLM with very few replacements:\n",
+    "To achieve perfect alignment, we need to manually adjust the LLM output with a few specific replacements:\n",
     "\n",
-    "1. ... => …\n",
-    "2. mise => messe\n",
-    "3. trasfigurato => trasfigurito\n",
+    "1. `...` → `…`\n",
+    "2. `mise` → `messe`\n",
+    "3. `trasfigurato` → `trasfigurito`\n",
     "\n",
-    "The tre dots can be writen as a `…` single caracter in place of the three dots caracters `...`.\n",
+    "The three dots can be written as a single `…` character instead of three separate dot characters `...`.\n",
     "\n",
-    "Messe can be used in placed of mise, see https://www.scholingua.com/it/it/coniugazione/mettersi.\n",
-    "Probabily the former is an older form.\n",
+    "`messe` can be used in place of `mise`, see https://www.scholingua.com/it/it/coniugazione/mettersi.\n",
+    "Probably the former is an older form.\n",
     "\n",
-    "Transfigurito looks an alternative way of saying transfigurato, see https://www.treccani.it/vocabolario/ricerca/trasfigurito/.\n",
+    "`trasfigurito` appears to be an alternative way of saying `trasfigurato`, see https://www.treccani.it/vocabolario/ricerca/trasfigurito/.\n",
     "\n",
-    "We can see those as small allucinations and we want to tollerate.\n",
-    "Other allucincations will produce an `AllucinationException` that will be logged to the system."
+    "We can consider these as minor hallucinations that we want to tolerate.\n",
+    "Other hallucinations will produce an `AllucinationException` that will be logged to the system."
    ]
   },
   {
@@ -961,6 +983,15 @@
     "    labels[-1] = golden_labels[-1]\n",
     "    \n",
     "    return labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "399c75dc",
+   "metadata": {},
+   "source": [
+    "Collect all words along with their corresponding golden labels and model-predicted labels for evaluation.\n",
+    "We will also compute the F1 score to measure model performance."
    ]
   },
   {
@@ -1180,6 +1211,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a69e721",
+   "metadata": {},
+   "source": [
+    "Finally, export the inference results to a CSV file for further analysis and comparison with other models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "8b4ef4ef",
@@ -1194,6 +1233,14 @@
     "\n",
     "# save the results\n",
     "mb_results.to_csv(\"Lost_in_language_recognition-hw2_split-Minerva-7B-based.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fef9d6f",
+   "metadata": {},
+   "source": [
+    "The results from this notebook will be used to analyze common prediction errors and model performance patterns. Detailed analysis and insights can be found in the accompanying research report."
    ]
   }
  ],
